force-app/main/default/objects/InsightOpportunity__c/InsightOpportunity__c.object-meta.xml
<CustomObject>
    <label>InsightOpportunity</label>
    <nameField>
        <label>InsightOpportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InsightOpportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>