force-app/main/default/objects/InsightOpportunity__c/fields/BusinessValueShare__c.field-meta.xml
<CustomField>
    <fullName>BusinessValueShare__c</fullName>
    <label>BusinessValueShare</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>