force-app/main/default/objects/InsightOpportunity__c/fields/Insight__c.field-meta.xml
<CustomField>
    <fullName>Insight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insight</label>
    <referenceTo>Insight__c</referenceTo>
    <relationshipLabel>InsightOpportunities</relationshipLabel>
    <relationshipName>InsightOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>